fixed background image not showing

--- a/sass/components/_flip.scss
+++ b/sass/components/_flip.scss
@@ -40,15 +40,15 @@
 }
 
 .flip-yellow .bg-img {
-  background-image: linear-gradient(orange, orange), url(../../img/nat-5.jpg);
+  background-image: linear-gradient(orange, orange), url(../img/nat-5.jpg);
 }
 
 .flip-green .bg-img {
-  background-image: linear-gradient(green, green), url(../../img/nat-6.jpg);
+  background-image: linear-gradient(green, green), url(../img/nat-6.jpg);
 }
 
 .flip-blue .bg-img {
-  background-image: linear-gradient(blue, blue), url(../../img/nat-7.jpg);
+  background-image: linear-gradient(blue, blue), url(../img/nat-7.jpg);
 }
 
 .flip-header {
