--- a/styles/style.css
+++ b/styles/style.css
@@ -193,13 +193,13 @@ p {
   background-blend-mode: screen; }
 
 .flip-yellow .bg-img {
-  background-image: linear-gradient(orange, orange), url(../../img/nat-5.jpg); }
+  background-image: linear-gradient(orange, orange), url(../img/nat-5.jpg); }
 
 .flip-green .bg-img {
-  background-image: linear-gradient(green, green), url(../../img/nat-6.jpg); }
+  background-image: linear-gradient(green, green), url(../img/nat-6.jpg); }
 
 .flip-blue .bg-img {
-  background-image: linear-gradient(blue, blue), url(../../img/nat-7.jpg); }
+  background-image: linear-gradient(blue, blue), url(../img/nat-7.jpg); }
 
 .flip-header {
   position: absolute;
@@ -284,7 +284,7 @@ p {
   margin: 0 auto;
   width: 85%;
   height: 100%;
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.774) 0% 50%, transparent 50%), url(../../img/nat-10.jpg);
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.774) 0% 50%, transparent 50%), url(../img/nat-10.jpg);
   background-position: center;
   background-size: cover; }
 
@@ -590,7 +590,7 @@ label {
 .header {
   height: 95vh;
   width: 100%;
-  background-image: linear-gradient(to right bottom, rgba(113, 228, 113, 0.8), rgba(55, 85, 55, 0.7)), url(../../img/hero.jpg);
+  background-image: linear-gradient(to right bottom, rgba(113, 228, 113, 0.8), rgba(55, 85, 55, 0.7)), url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
@@ -727,7 +727,7 @@ label {
   padding: 3rem; }
 
 .features-section {
-  background-image: linear-gradient(to right bottom, rgba(113, 228, 113, 0.8), rgba(55, 85, 55, 0.7)), url(../../img/nat-4.jpg);
+  background-image: linear-gradient(to right bottom, rgba(113, 228, 113, 0.8), rgba(55, 85, 55, 0.7)), url(../img/nat-4.jpg);
   background-position: top;
   background-size: cover;
   text-align: center;
